--- a/Finished Python Tutorial/1 - An Introduction to Python.ipynb
+++ b/Finished Python Tutorial/1 - An Introduction to Python.ipynb
@@ -61,6 +61,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -113,17 +114,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3.5\n",
+      "7.5\n",
+      "True\n",
+      "Hello World 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "print 3 # integer\n",
     "print 3.5 # float\n",
     "print 3 + 4.5 # float\n",
     "print True # boolean\n",
-    "print \"Hello World 2.0\" #string"
+    "print \"Hello World 1.0\" #string"
    ]
   },
   {
@@ -135,11 +148,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 5 7\n",
+      "Hello World is 2 words long\n"
+     ]
+    }
+   ],
    "source": [
     "print 3, 5, 7\n",
     "print \"Hello World is\", 2, \"words long\""
@@ -154,13 +176,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The variable 4.0 is of <type 'float'>\n"
+     ]
+    }
+   ],
    "source": [
-    "x = '4.0'\n",
+    "x = 4.0\n",
     "print \"The variable\", x, \"is of\", type(x)"
    ]
   },
@@ -180,11 +210,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value of x: 4\n",
+      "Value of x+1: 5\n",
+      "Value of x-1: 3\n",
+      "Value of x*2: 8\n",
+      "Value of x**3: 64\n",
+      "Value of x: 4\n"
+     ]
+    }
+   ],
    "source": [
     "x = 4\n",
     "print \"Value of x:\", x\n",
@@ -192,9 +235,7 @@
     "print \"Value of x-1:\", x - 1       # Subtraction\n",
     "print \"Value of x*2:\", x * 2       # Multiplication\n",
     "print \"Value of x**3:\", x ** 3     # Exponentiation\n",
-    "print \"Value of x:\", x             # Notice that the value of x is still the same! We didn't do any assignment!\n",
-    "x = x ** 3\n",
-    "print x"
+    "print \"Value of x:\", x             # Notice that the value of x is still the same! We didn't do any assignment!"
    ]
   },
   {
@@ -206,9 +247,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "x = 5\n",
     "print x\n",
@@ -225,9 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 10\n"
+     ]
+    }
+   ],
    "source": [
     "x, y = 4, 5     # same as x = 4; y = 5\n",
     "x += 1          # same as: x = x + 1\n",
@@ -244,11 +302,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The variable x is a: <type 'int'>\n",
+      "The variable x is now a: <type 'float'>\n",
+      "3.1\n"
+     ]
+    }
+   ],
    "source": [
     "x = 3\n",
     "print \"The variable x is a:\", type(x)\n",
@@ -266,9 +334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "0.666666666667\n",
+      "1.66666666667\n"
+     ]
+    }
+   ],
    "source": [
     "print 2/3\n",
     "print 5/3\n",
@@ -285,11 +364,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2.61269625208e+11\n"
+     ]
+    }
+   ],
    "source": [
-    "print 12323412341234/2344.5/(123+12416-123123)"
+    "print 12323412341234*2344.5/(123+12416-123123)"
    ]
   },
   {
@@ -301,14 +388,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "7\n",
+      "3\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "bad operand type for abs(): 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-27-1f79618b12f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m       \u001b[0;31m# gets the max from a list of numbers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m       \u001b[0;31m# gets the min from a list of numbers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"-5\"\u001b[0m\u001b[0;34m)\u001b[0m     \u001b[0;31m# TypeError!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: bad operand type for abs(): 'str'"
+     ]
+    }
+   ],
    "source": [
     "print abs(-5)          # absolute value\n",
     "print max(5,6,7)       # gets the max from a list of numbers\n",
     "print min(3,4,5)       # gets the min from a list of numbers\n",
-    "print abs(-1000) # TypeError!"
+    "print abs(\"-5\")     # TypeError!"
    ]
   },
   {
@@ -320,9 +428,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "279.508497187\n",
+      "4.0\n",
+      "5040\n",
+      "148.413159103\n",
+      "3.14159265359\n",
+      "2.71828182846\n",
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
@@ -355,9 +478,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'bool'>\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "t, f = True, False\n",
     "print type(t) # Prints \"<type 'bool'>\"\n",
@@ -373,9 +505,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "2\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print t and f # Logical AND\n",
     "print t or f  # Logical OR\n",
@@ -397,9 +545,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Richard is dumb\n",
+      "Richard is dumber than Andy\n",
+      "Richard and Andy are equally smart\n"
+     ]
+    }
+   ],
    "source": [
     "richards_iq = 100\n",
     "if richards_iq < 120:\n",
@@ -457,7 +615,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import collections\n",
@@ -474,7 +634,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "s = \"hello\"\n",
@@ -506,7 +668,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print float(2) # 2.0\n",
@@ -524,7 +688,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print type(str(2.5)) # string\n",
@@ -549,6 +715,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -572,6 +739,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -593,7 +761,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print nums[0]\n",
@@ -610,7 +780,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print nums[0:3]\n",
@@ -627,7 +799,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print nums\n",
@@ -654,7 +828,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import random\n",
@@ -675,7 +851,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "counter = 0\n",
@@ -694,7 +872,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i in range(5):\n",
@@ -716,7 +896,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i in range(5):\n",
@@ -751,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -774,9 +956,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "Hello Andy\n",
+      "Hello Richard\n",
+      "Hello 2.5\n",
+      "Hello World Please Ignore\n",
+      "Hello Andy\n",
+      "Hello Richard\n"
+     ]
+    }
+   ],
    "source": [
     "hello() # Should print out \"Hello World\"\n",
     "\n",
@@ -810,9 +1006,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test\n",
+      "None\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-9022fcec5a08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mgreet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Test\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'name' is not defined"
+     ]
+    }
+   ],
    "source": [
     "def greet(name):\n",
     "    print name\n",
